Fix button and tab wrap

--- a/less/main.less
+++ b/less/main.less
@@ -80,12 +80,13 @@ img {
     min-height: 60vh;
     nav{
         display: flex;
-        padding: 2%;
+        padding: 1%;
         padding-bottom: 0px;
         border-bottom: 3px solid @red;
         a{
-          min-width: 8%;
+          min-width: 130px;
           flex-wrap: nowrap;
+          min-height: fit-content;
           button{
             min-width: fit-content;
             flex-wrap: nowrap;
@@ -103,4 +104,9 @@ img {
   padding: 10px;
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
   border-radius: 75px;
+}
+
+button{
+  min-width: fit-content;
+  flex-wrap: wrap;
 }
